Fix gulp, _normalize.scss issue, and button alignment

--- a/public/scss/partials/_button.scss
+++ b/public/scss/partials/_button.scss
@@ -18,7 +18,6 @@
     display: inline-block;
     min-width: $button-min-width;
     padding: $button-padding-y $button-padding-x;
-    margin-bottom: 1em;
     color: $text-color;
     text-align: center;
     text-decoration: none;
